--- a/public/about-education/index.html
+++ b/public/about-education/index.html
@@ -37,7 +37,7 @@
 	<h2 class="shout">Об образовании в современном мире 🎓</h2>
 </section>
 
-<section class="slide">
+<section class="slide" hidden>
 	<h2>Давайте знакомиться!</h2>
 	<div style="position: absolute; left: -1px; top: 16%; width: 105%; height: 50%; overflow: hidden; box-shadow: 0 0 24px -4px rgba(0, 0, 0, 1);">
 		<img class="place" src="/bmstu.jpg"
@@ -49,7 +49,7 @@
 	</ul>
 </section>
 
-<section class="slide">
+<section class="slide" hidden>
 	<h2>Давайте знакомиться!</h2>
 	<div style="position: absolute; left: -1px; top: 16%; width: 101%; height: 47%; overflow: hidden; box-shadow: 0 0 24px -4px rgba(0, 0, 0, 1);">
 		<img class="place" src="/skylight.png"
@@ -64,7 +64,7 @@
 	</ul>
 </section>
 
-<section class="slide">
+<section class="slide" hidden>
 	<h2>Давайте знакомиться!</h2>
 	<div style="position: absolute; left: -1px; top: 16%; width: 101%; height: 60%; overflow: hidden; box-shadow: 0 0 24px -4px rgba(0, 0, 0, 1);">
 		<img class="place" src="/tech.jpg"
@@ -74,10 +74,6 @@
 		<li>Преподаю курс Frontend-разработки в <strong>Технопарке Mail.Ru</strong> &mdash; <a
 				href="https://park.mail.ru/pages/about/" target="_blank">park.mail.ru</a></li>
 	</ul>
-</section>
-
-<section class="slide">
-	<h2 class="shout"><span style="font-size: 90%">Программист или разработчик?</span></h2>
 </section>
 
 <section class="slide">
@@ -91,10 +87,143 @@
 <section class="slide">
 	<h2>Soft-skills</h2>
 	<blockquote class="small-content" style="transform: scale(1.5); transform-origin: left top; width: 66%;">
-		<p><strong>Soft-skills</strong> &mdash; это приобретенные навыки, которые вы получили через дополнительное
-			образование и личный опыт и используете для дальнейшего развития в своей профессиональной отрасли. Именно
-			поэтому они так ценятся при приеме на работу</p>
+		<p><strong>Soft-skills</strong> &mdash; комплекс неспециализированных, надпрофессиональных навыков, которые отвечают за успешное участие в рабочем процессе, высокую производительность и являются сквозными, то есть не связаны с конкретной предметной областью</p>
 	</blockquote>
+</section>
+
+<section class="slide">
+	<h2 class="shout"><span style="font-size: 90%">Hard-skills</span></h2>
+</section>
+
+<section class="slide">
+	<h2>Кривая обучения</h2>
+	<div style="position: absolute; left: 0; top: 0; width: 100%; height: 100%;">
+		<img class="place" src="/education-curve.jpg"
+			 style="transform-origin: center; transform: translate(-50%,-40%) scale(1.6);">
+	</div>
+</section>
+
+<section class="slide question">
+	<h2>Процесс обучения<br>
+		<div style="font-size: 50%; display: inline-block; font-weight: 200; margin-top: 16px;">
+			<ul>
+				<li>познание</li>
+				<li>категоризация</li>
+				<li>закрепление</li>
+			</ul>
+		</div>
+	</h2>
+</section>
+
+<section class="slide question">
+	<h2>Процесс познания
+		<br><span style="font-size: 45%; display: inline-block; font-weight: 100;">&mdash; не столько процесс усвоения новой информации, сколько процесс <span style="font-weight: 400;">осознания того, что такая информация вообще существует</span></span>
+	</h2>
+</section>
+
+<section class="slide question">
+	<h2>Категоризация
+		<br><span style="font-size: 45%; display: inline-block; font-weight: 100;"><span style="font-weight: 400;">важность</span> &mdash; насколько информация ценна в долгосрочной перспективе</span>
+		<br><span style="font-size: 45%; display: inline-block; font-weight: 100;"><span style="font-weight: 400;">актуальность</span> &mdash; насколько информация изменит вашу жизнь к лучшему уже сейчас</span>
+	</h2>
+</section>
+
+<section class="slide">
+	<h2>Категоризация</h2>
+	<div style="position: absolute; left: 0; top: 0; width: 100%; height: 100%;">
+		<img class="place" src="/scheme-0.svg"
+			 style="transform-origin: center; transform: translate(-50%,-40%) scale(1.6);">
+	</div>
+</section>
+
+<section class="slide">
+	<h2>Категоризация</h2>
+	<div style="position: absolute; left: 0; top: 0; width: 100%; height: 100%;">
+		<img class="place" src="/scheme-1.svg"
+			 style="transform-origin: center; transform: translate(-50%,-40%) scale(1.6);">
+	</div>
+</section>
+
+<section class="slide">
+	<h2>Категоризация</h2>
+	<div style="position: absolute; left: 0; top: 0; width: 100%; height: 100%;">
+		<img class="place" src="/scheme-2.svg"
+			 style="transform-origin: center; transform: translate(-50%,-40%) scale(1.6);">
+	</div>
+</section>
+
+<section class="slide">
+	<h2>Категоризация</h2>
+	<div style="position: absolute; left: 0; top: 0; width: 100%; height: 100%;">
+		<img class="place" src="/scheme-3.svg"
+			 style="transform-origin: center; transform: translate(-50%,-40%) scale(1.6);">
+	</div>
+</section>
+
+<section class="slide">
+	<h2>Категоризация</h2>
+	<div style="position: absolute; left: 0; top: 0; width: 100%; height: 100%;">
+		<img class="place" src="/scheme-4.svg"
+			 style="transform-origin: center; transform: translate(-50%,-40%) scale(1.6);">
+	</div>
+</section>
+
+<section class="slide">
+	<h2>Категоризация</h2>
+	<div style="position: absolute; left: 0; top: 0; width: 100%; height: 100%;">
+		<img class="place" src="/scheme-5.svg"
+			 style="transform-origin: center; transform: translate(-50%,-40%) scale(1.6);">
+	</div>
+</section>
+
+<section class="slide">
+	<h2>Категоризация</h2>
+	<div style="position: absolute; left: 0; top: 0; width: 100%; height: 100%;">
+		<img class="place" src="/scheme-6.svg"
+			 style="transform-origin: center; transform: translate(-50%,-40%) scale(1.6);">
+	</div>
+</section>
+
+<section class="slide">
+	<h2>Категоризация</h2>
+	<div style="position: absolute; left: 0; top: 0; width: 100%; height: 100%;">
+		<img class="place" src="/scheme-7.svg"
+			 style="transform-origin: center; transform: translate(-50%,-40%) scale(1.6);">
+	</div>
+</section>
+
+<section class="slide">
+	<h2>Категоризация</h2>
+	<div style="position: absolute; left: 0; top: 0; width: 100%; height: 100%;">
+		<img class="place" src="/scheme-8.svg"
+			 style="transform-origin: center; transform: translate(-50%,-40%) scale(1.6);">
+	</div>
+</section>
+
+<section class="slide question">
+	<h2>Где всему этому учиться?</h2>
+</section>
+
+<section class="slide question">
+	<h2><span style="font-size: 80%">"С" &mdash; <em>самообразование</em></span></h2>
+</section>
+
+<section class="slide question">
+	<h2><span style="font-size: 80%"><a href="https://corp.mail.ru/ru/company/education/" target="_blank">Mail.Ru Group для образования</a></span>
+	</h2>
+</section>
+
+<section class="slide question">
+	<h2>Что ещё?<br>
+		<span style="font-size: 55%; display: inline-block; font-weight: 100;">&mdash; читайте статьи, например, на <a
+				href="https://habr.com/top/" target="_blank">habr.com</a>, <a
+				href="https://medium.com/tag/information-technology" target="_blank">medium.com</a></span>
+		<span style="font-size: 55%; display: inline-block; font-weight: 100;">&mdash; посещайте и смотрите выступления на конференциях</span>
+	</h2>
+</section>
+
+<section class="slide">
+	<h2 class="shout"><span style="font-size: 90%">Soft-skills</span></h2>
 </section>
 
 <section class="slide question">
@@ -121,33 +250,8 @@
 	<h2><span style="font-size: 80%">Умение быть коммуникабельным</span></h2>
 </section>
 
-<section class="slide question">
-	<h2>В перспективе<br>
-		<div style="font-size: 50%; display: inline-block; font-weight: 200; margin-top: 16px;">
-			<ul>
-				<li>Управление людьми (лидерские качества)</li>
-				<li>Навыки публичных выступлений</li>
-				<li>Продуктовые навыки</li>
-			</ul>
-		</div>
-	</h2>
-</section>
-
 <section class="slide">
-	<h2 class="shout">Где всему этому учиться?</h2>
-</section>
-
-<section class="slide question">
-	<h2><span style="font-size: 80%">"С" &mdash; <em>самообразование</em></span></h2>
-</section>
-
-<section class="slide question">
-	<h2><span style="font-size: 80%"><a href="https://corp.mail.ru/ru/company/education/" target="_blank">Mail.Ru Group для образования</a></span>
-	</h2>
-</section>
-
-<section class="slide">
-	<h2 class="shout">Как делать презентации в 2к17 году</h2>
+	<h2 class="shout">Как делать презентации в 2к18 году</h2>
 </section>
 
 <section class="slide question">
@@ -155,10 +259,9 @@
 		<div style="font-size: 50%; display: inline-block; font-weight: 200; margin-top: 16px;">
 			<ul>
 				<li>Shower &mdash; <a href="https://github.com/shower/shower" target="_blank">github.com/shower</a></li>
-				<li>reveal.js &mdash; <a href="https://github.com/hakimel/reveal.js" target="_blank">github.com/reveal.js</a>
-				</li>
-				<li>impress.js &mdash; <a href="https://github.com/impress/impress.js" target="_blank">github.com/impress.js</a>
-				</li>
+				<li>RevealJs &mdash; <a href="https://github.com/hakimel/reveal.js" target="_blank">github.com/reveal.js</a></li>
+				<li>WebSlides &mdash; <a href="https://github.com/webslides/webslides" target="_blank">github.com/webslides</a></li>
+				<li>DeckJs &mdash; <a href="https://github.com/imakewebthings/deck.js" target="_blank">github.com/deck.js</a></li>
 			</ul>
 		</div>
 	</h2>
@@ -170,19 +273,11 @@
 			<ul>
 				<li>Heroku &mdash; <a href="https://www.heroku.com/" target="_blank">heroku.com</a></li>
 				<li>Firebase &mdash; <a href="https://firebase.google.com/" target="_blank">firebase.google.com</a></li>
+				<li><strong>Now &mdash; <a href="https://zeit.co/now" target="_blank">zeit.co/now</a></strong></li>
 			</ul>
 		</div>
 	</h2>
 </section>
-
-<section class="slide question">
-	<h2>Runtime Environment for JavaScript<br>
-		<div style="font-size: 55%; display: inline-block; font-weight: 200; margin-top: 16px;">
-			&mdash; Node.js (<a href="https://nodejs.org/en/" target="_blank">https://nodejs.org</a>)
-		</div>
-	</h2>
-</section>
-
 
 <section class="slide">
 	<h2 class="shout">И напоследок два важных совета</h2>
