--- a/public/about-education/index.html
+++ b/public/about-education/index.html
@@ -201,6 +201,17 @@
 </section>
 
 <section class="slide question">
+	<h2>Закрепление<br>
+		<div style="font-size: 50%; display: inline-block; font-weight: 200; margin-top: 16px;">
+			<ul>
+				<li>в рабочее время</li>
+				<li>в свободное (личное) время</li>
+			</ul>
+		</div>
+	</h2>
+</section>
+
+<section class="slide question">
 	<h2>Где всему этому учиться?</h2>
 </section>
 
@@ -281,17 +292,6 @@
 
 <section class="slide">
 	<h2 class="shout">И напоследок два важных совета</h2>
-</section>
-
-<section class="slide question">
-	<h2>Важно<br>
-		<div style="font-size: 50%; display: inline-block; font-weight: 200; margin-top: 16px;">
-			<ul>
-				<li>Оказаться в нужном месте в нужное время</li>
-				<li>Всегда быть в гуще событий</li>
-			</ul>
-		</div>
-	</h2>
 </section>
 
 <section class="slide first">
