--- a/public/about-it/index.html
+++ b/public/about-it/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-	<title>День IT-знаний, город Норильск, 2018 год</title>
+	<title>День IT-знаний, город Норильск, 2019 год</title>
 	<meta charset="utf-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -16,7 +16,7 @@
 
 <header class="caption">
 	<h1>День IT-знаний</h1>
-	<p>Город Норильск, 2018 год</p>
+	<p>Город Норильск, 2019 год</p>
 </header>
 
 <section class="slide first">
@@ -27,7 +27,7 @@
 			<span style="font-size: 120px;">День IT-знаний</span>
 			<br/>
 			<small>Слайды доступны по ссылке<br/>
-				<a href="https://it-day-2018.firebaseapp.com/">it-day-2018.firebaseapp.com</a>
+				<a href="https://it-day-2019.web.app/">it-day-2019.web.app</a>
 			</small>
 		</div>
 	</h2>
@@ -35,6 +35,30 @@
 
 <section class="slide">
 	<h2 class="shout">Как найти свой путь в IT? 🤔</h2>
+</section>
+
+<section class="slide">
+	<h2>Давайте знакомиться!</h2>
+	<div style="position: absolute; left: -1px; top: 16%; width: 105%; height: 50%; overflow: hidden; box-shadow: 0 0 24px -4px rgba(0, 0, 0, 1);">
+		<img class="place" src="/bmstu.jpg"
+			 style="transform-origin: center; transform: translate(-50%,-45%) scale(1.05);">
+	</div>
+	<ul lang="ru" style="margin-top: 46%;">
+		<li>Окончил 6 курсов <strong>МГТУ им. Н. Э. Баумана</strong></li>
+		<li>Факультет <em>"Информатика и системы Управления"</em>, кафедра <em>"Информационная безопасность"</em></li>
+	</ul>
+</section>
+
+<section class="slide">
+	<h2>Давайте знакомиться!</h2>
+	<div style="position: absolute; left: -1px; top: 16%; width: 101%; height: 47%; overflow: hidden; box-shadow: 0 0 24px -4px rgba(0, 0, 0, 1);">
+		<img class="place" src="/skylight.png"
+			 style="transform-origin: center; transform: translate(-48%,-48%) scale(0.87);">
+	</div>
+	<ul lang="ru" style="margin-top: 44%;">
+		<li>Стаж программирования &mdash; чуть больше шести лет</li>
+		<li>С третьего курса <strong>работаю в компании Mail.ru Group. Сейчас &mdash; <em>Ведущий разработчик</em></strong> <mark>Почты Mail.ru</mark></li>
+	</ul>
 </section>
 
 <section class="slide question nologo">
@@ -319,15 +343,6 @@
 </section>
 
 <section class="slide">
-	<h2>Как стать IT-специалистом?</h2>
-	<ul class="small-content" style="transform: scale(1.5); transform-origin: left top;">
-		<li><s>Хорошо учиться в школе</s></li>
-		<li><s>Знать математику на отлично</s></li>
-		<li><s>Закончить ВУЗ по специальности</s></li>
-	</ul>
-</section>
-
-<section class="slide">
 	<h2>Несколько простых шагов</h2>
 	<ul class="small-content" style="transform: scale(1.5); transform-origin: left top; width: 66%;">
 		<li>Выбрать сферу деятельности</li>
@@ -492,9 +507,7 @@
 	</style>
 	<h2 class="shout custom-bgc">Вопросы?<br/>
 		<div style="display: block; margin-top: 16px;">
-			<small style="display: block; margin-top: 6px;">Пишите нам на:
-				<br />
-				<a href="mailto:s.tugovikov@corp.mail.ru?subject=День IT-знаний" target="_blank">s.tugovikov@corp.mail.ru</a>
+			<small style="display: block; margin-top: 6px;">Пишите мне на:
 				<br />
 				<a href="mailto:a.ostapenko@corp.mail.ru?subject=День IT-знаний" target="_blank">a.ostapenko@corp.mail.ru</a>
 			</small>
