--- a/public/about-education/index.html
+++ b/public/about-education/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-	<title>День IT-знаний, город Норильск, 2018 год</title>
+	<title>День IT-знаний, город Норильск, 2019 год</title>
 	<meta charset="utf-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -16,7 +16,7 @@
 
 <header class="caption">
 	<h1>День IT-знаний</h1>
-	<p>Город Норильск, 2018 год</p>
+	<p>Город Норильск, 2019 год</p>
 </header>
 
 <section class="slide first">
@@ -27,7 +27,7 @@
 			<span style="font-size: 120px;">День IT-знаний</span>
 			<br/>
 			<small>Слайды доступны по ссылке<br/>
-				<a href="https://it-day-2018.firebaseapp.com/">it-day-2018.firebaseapp.com</a>
+				<a href="https://it-day-2019.web.app/">it-day-2019.web.app</a>
 			</small>
 		</div>
 	</h2>
@@ -35,45 +35,6 @@
 
 <section class="slide">
 	<h2 class="shout">Об образовании в современном мире 🎓</h2>
-</section>
-
-<section class="slide" hidden>
-	<h2>Давайте знакомиться!</h2>
-	<div style="position: absolute; left: -1px; top: 16%; width: 105%; height: 50%; overflow: hidden; box-shadow: 0 0 24px -4px rgba(0, 0, 0, 1);">
-		<img class="place" src="/bmstu.jpg"
-			 style="transform-origin: center; transform: translate(-50%,-45%) scale(1.05);">
-	</div>
-	<ul lang="ru" style="margin-top: 46%;">
-		<li>Сейчас я учусь на 5 курсе <strong>МГТУ им. Н. Э. Баумана</strong></li>
-		<li>Факультет <em>"Информатика и системы Управления"</em>, кафедра <em>"Информационная безопасность"</em></li>
-	</ul>
-</section>
-
-<section class="slide" hidden>
-	<h2>Давайте знакомиться!</h2>
-	<div style="position: absolute; left: -1px; top: 16%; width: 101%; height: 47%; overflow: hidden; box-shadow: 0 0 24px -4px rgba(0, 0, 0, 1);">
-		<img class="place" src="/skylight.png"
-			 style="transform-origin: center; transform: translate(-48%,-48%) scale(0.87);">
-	</div>
-	<ul lang="ru" style="margin-top: 44%;">
-		<li>Стаж программирования &mdash; чуть больше пяти лет</li>
-		<li>С третьего курса <strong>работаю в компании Mail.Ru Group <em>Frontend-разработчиком</em></strong>:
-			разрабатываю сервис
-			<mark>Почта@Mail.Ru</mark> &mdash; по адресу <a href="https://e.mail.ru/"
-															target="_blank">https://e.mail.ru/</a></li>
-	</ul>
-</section>
-
-<section class="slide" hidden>
-	<h2>Давайте знакомиться!</h2>
-	<div style="position: absolute; left: -1px; top: 16%; width: 101%; height: 60%; overflow: hidden; box-shadow: 0 0 24px -4px rgba(0, 0, 0, 1);">
-		<img class="place" src="/tech.jpg"
-			 style="transform-origin: center; transform: translate(-50%,-57%) scale(1.08);">
-	</div>
-	<ul lang="ru" style="margin-top: 55%;">
-		<li>Преподаю курс Frontend-разработки в <strong>Технопарке Mail.Ru</strong> &mdash; <a
-				href="https://park.mail.ru/pages/about/" target="_blank">park.mail.ru</a></li>
-	</ul>
 </section>
 
 <section class="slide">
@@ -220,7 +181,7 @@
 </section>
 
 <section class="slide question">
-	<h2><span style="font-size: 80%"><a href="https://corp.mail.ru/ru/company/education/" target="_blank">Mail.Ru Group для образования</a></span>
+	<h2><span style="font-size: 80%"><a href="https://corp.mail.ru/ru/company/education/" target="_blank">Mail.ru Group для образования</a></span>
 	</h2>
 </section>
 
@@ -291,7 +252,7 @@
 </section>
 
 <section class="slide">
-	<h2 class="shout">И напоследок два важных совета</h2>
+	<h2 class="shout">И напоследок один важный совет</h2>
 </section>
 
 <section class="slide first">
@@ -303,8 +264,6 @@
 	<h2 class="shout custom-bgc">Вопросы?<br/>
 		<div style="display: block; margin-top: 16px;">
 			<small style="display: block; margin-top: 6px;">Пишите нам на:
-				<br />
-				<a href="mailto:s.tugovikov@corp.mail.ru?subject=День IT-знаний" target="_blank">s.tugovikov@corp.mail.ru</a>
 				<br />
 				<a href="mailto:a.ostapenko@corp.mail.ru?subject=День IT-знаний" target="_blank">a.ostapenko@corp.mail.ru</a>
 			</small>
