--- a/public/about-education/index.html
+++ b/public/about-education/index.html
@@ -263,7 +263,7 @@
 	</style>
 	<h2 class="shout custom-bgc">Вопросы?<br/>
 		<div style="display: block; margin-top: 16px;">
-			<small style="display: block; margin-top: 6px;">Пишите нам на:
+			<small style="display: block; margin-top: 6px;">Пишите мне на:
 				<br />
 				<a href="mailto:a.ostapenko@corp.mail.ru?subject=День IT-знаний" target="_blank">a.ostapenko@corp.mail.ru</a>
 			</small>
