--- a/public/about-education/index.html
+++ b/public/about-education/index.html
@@ -165,7 +165,7 @@
 	<h2>Закрепление<br>
 		<div style="font-size: 50%; display: inline-block; font-weight: 200; margin-top: 16px;">
 			<ul>
-				<li>в рабочее время</li>
+				<li>в учебное время</li>
 				<li>в свободное (личное) время</li>
 			</ul>
 		</div>
@@ -223,7 +223,7 @@
 </section>
 
 <section class="slide">
-	<h2 class="shout">Как делать презентации в 2к18 году</h2>
+	<h2 class="shout">Как делать презентации в 2019 году</h2>
 </section>
 
 <section class="slide question">
